<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants">

    <RelativeLayout
        android:id="@+id/rel_casting_forgot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true">

        <RelativeLayout
            android:id="@+id/casting_forgot_top_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/top_bar">

            <com.sdi.castivate.fonts.RockWell
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/castivity"
                android:textColor="@android:color/white"
                android:textSize="28sp" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/casting_forgot_top_bar"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <com.sdi.castivate.fonts.ProximanovaCondRegular
                style="@style/txt_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:padding="20dp"
                android:text="@string/profile_notmatching"
                android:textSize="20sp" />


            <com.sdi.castivate.fonts.ProximanovaCondRegular
                style="@style/txt_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/apply_msg"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <com.sdi.castivate.fonts.ProximaNovaRegularButton
                    android:id="@+id/appliedId"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_apply"
                    android:gravity="center"
                    android:text="@string/apply"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_medium"
                    android:textSize="18sp" />

                <com.sdi.castivate.fonts.ProximaNovaRegularButton
                    android:id="@+id/cancelCasting"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_signin"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>