<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants">

    <RelativeLayout
        android:id="@+id/rel_casting_forgot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true">

        <RelativeLayout
            android:id="@+id/casting_forgot_top_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/top_bar">

            <LinearLayout
                android:id="@+id/casting_forgot_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/back_icon"
                    android:padding="5dp"
                    android:visibility="visible" />

                <com.sdi.castivate.fonts.ProximaNovaLightTextView
                    android:id="@+id/casting_login_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/back"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:visibility="visible" />


            </LinearLayout>

            <com.sdi.castivate.fonts.RockWell
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/castivity"
                android:textColor="@android:color/white"
                android:textSize="28sp" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/casting_forgot_top_bar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:orientation="vertical">


            <com.sdi.castivate.fonts.ProximanovaCondSemiBold
                style="@style/txt_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/txt_forgot"
                android:textSize="21sp" />


            <com.sdi.castivate.fonts.ProximaNovaRegularEditText
                android:id="@+id/et_forgot_email"
                style="@style/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/sign_back"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColorHint="#737272"
                android:textSize="18sp" />


            <com.sdi.castivate.fonts.ProximaNovaRegularButton
                android:id="@+id/btn_forgot_submit"
                style="@style/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_signin"
                android:gravity="center"
                android:hint="@string/btn_submit"
                android:textSize="18sp" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>