<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/casting_resume_upload_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_bar"
        android:visibility="visible">


        <LinearLayout
            android:id="@+id/casting_resume_upload_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_icon"
                android:padding="5dp"
                android:visibility="visible" />

            <com.sdi.castivate.fonts.ProximaNovaRegular
                android:id="@+id/casting_resume_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible" />

        </LinearLayout>

        <com.sdi.castivate.fonts.RockWell
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/castivity"
            android:textColor="@android:color/white"
            android:textSize="26sp" />


        <com.sdi.castivate.fonts.ProximaNovaRegular
            android:id="@+id/casting_resume_upload_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="visible" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/upload_hide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/casting_resume_upload_top_bar"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <com.sdi.castivate.fonts.ProximanovaCondSemiBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/resume"
            android:textColor="@color/dark_black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layShowFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="15dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imgRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:src="@drawable/image_delete_icon" />

            <com.sdi.castivate.fonts.ProximaNovaRegular
                android:id="@+id/txtFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/imgRemove"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="fddfljhlkj"
                android:textColor="@color/dark_black"
                android:textSize="18sp"
                android:textStyle="normal"
                android:visibility="visible" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/resume_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/dotted"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/image_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/upload_icon" />

            <com.sdi.castivate.fonts.ProximaNovaLightTextView
                android:id="@+id/txt_resume_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_resume"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/audio_upload"
                android:textColor="#737272"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/drive_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/casting_resume_upload_top_bar"
        android:divider="@color/dark_black"
        android:visibility="gone" />

</RelativeLayout>